--- a/com2us_mmo_masterData.csproj
+++ b/com2us_mmo_masterData.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Dapper" Version="2.0.90" />
       <PackageReference Include="MySqlConnector" Version="1.3.11" />
       <PackageReference Include="System.Data.OleDb" Version="6.0.0-preview.6.21352.12" />
+      <PackageReference Include="ZLogger" Version="1.5.1" />
     </ItemGroup>
 
 </Project>
